Version 0.10.1 "Willoughby" -- Subversion
-----------------

* Added ability to set a media type for a stylesheet
* Added some database checks to installer.  Should help to
stop some install problems people are having.
* Added ability to link to an anchor with cms_selflink
* Added CSSMenu module and made it the default menu for new
installs
* Changed {content}, {html_blob} and {title} tags to be case
insensitive
* Changed logic of included htaccess so that html can be used
as the default extension for friendly urls
* Fixed a bug with $gCms->variables['page_name'] not always
returning the alias
* Fixed a bug where IIS users couldn't login correctly
* Fixed a bug where IIS didn't always report QUERY_STRING, which
would generate a warning message
* Fixed a bug where all users can't get to user preferences
* Fixed a bug where css assocations did not get deleted when a
template does
* Fixed a few bugs with the css assocation page
* Fixed a few bugs with the News module
* Fixed a bug where debug mode would cause a warning error
* Fixed bug where deleting a user didn't delete their preferences
* Fixed bug with phplayers not displaying correctly if the body tag
of the template had any attributes
* Fixed bug where custom 404 message didn't show existing value
* Fixed bug with template/css associations not working properly on
Postgres
* Fixed bug with News content type where clicking on details would
link to the admin
* Swedish translation was incorrectly usinng se_SE instead of sv_SE
as it's locale name.
* Updated ADODB to 4.65
* XHTML header did not pass along proper encoding in the admin

Version 0.10 "Antigua" -- Tue Jul 05 2005
-----------------

* Added dropdown of encodings to add/edit template pages
* Added multiple content blocks
* Added recursive html blobs
* Added ability for modules to use templates, either file based
or db based through a few API calls
* Added support for module translations
* Added indexes to increase performance